--- a/5QuintaSesion/display.html
+++ b/5QuintaSesion/display.html
@@ -41,7 +41,7 @@
 
         #div2{
             z-index: 1; /*para ver en que capa lo pones, detrás o delante de otro elemento*/
-            position: absolute;
+            position:fixed;
             background-color: lightcoral;
             left: 150px;
             top: 520px;
@@ -60,7 +60,7 @@
             border: 3px dashed blue;
             margin: 15px;
             background-color: burlywood;
-            width: 20%;
+            width: 50%;
         }
         
     </style>
